--- a/ms-payRoll/payRoll/src/main/resources/application.properties
+++ b/ms-payRoll/payRoll/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=hr-payRoll
-server.port=8001
+server.port=8101
 
 # Database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -9,3 +9,8 @@ spring.jpa.defer-datasource-initialization=true
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+hr-worker.host=http://localhost:8001
+
+
+
