Ajustes de balanciamente e troca de informações das API

--- a/ms-payRoll/payRoll/src/main/resources/application.properties
+++ b/ms-payRoll/payRoll/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=hr-payRoll
 server.port=8101
 
+ms-work.ribbon.listOfServers=localhost:8001
+
+
 # Database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
