Criação de microserviços, controle de servidor de chamadas e configurando gateWay

--- a/ms-worker/worker/src/main/resources/application.properties
+++ b/ms-worker/worker/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=ms-work
 server.port=8001
 
+eureka.client.service-url.defaulZone=http://localhost:8756/eureka
+
 # Database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
