--- a/ms-payRoll/payRoll/src/main/resources/application.properties
+++ b/ms-payRoll/payRoll/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=hr-payRoll
-server.port=8101
+server.port=${PORT:0}
 
-ms-work.ribbon.listOfServers=localhost:8001
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 # Database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
@@ -13,7 +13,11 @@ spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-hr-worker.host=http://localhost:8001
+
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+ribbon.ConnectTimeout=10000
+ribbon.ReadTimeout=20000
 
 
 
